fix(ngDialog) added comment+fix overflow from scroll to auto
added a comment stating we added showing scroll on default for mac and changed overflow to be auto and not scroll.

CFY-2837

--- a/app/styles/_dialogs.scss
+++ b/app/styles/_dialogs.scss
@@ -200,7 +200,7 @@ input[required] {
               list-style-type: none;
               //restricting to 5 inputs,the rest is scrollable
               max-height: 200px;
-              overflow-y: scroll;
+              overflow-y: auto;
               li:first-child{
                 margin-top:-5px;
               }
